base/web-service.yml
apiVersion: v1
kind: Service

metadata:
  name: devops-web-service
  labels:
    app: devops
    component: web

spec:
  type: ClusterIP

  selector:
    app: devops
    component: web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
