base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: devops.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-web-service
                port:
                  number: 80
